core/tests/integration/fail/contracts/type_annot_inline.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
((fun x => x) : Number -> Number) "a"
